# stat_arb

./: .flake8  .gitignore  README.md  dev.bat  pyproject.toml  run_checks.bat
notebooks/: scraps.ipynb
src/model/: data_handler.py
src/scraps/final_project/: augmented_dickey_fuller.py  bivariate_engle_granger.py  final_project_scraps.ipynb  multivariate_linear_regression.py  requirements.txt  timeseries_data.py  utils.py  vector_autoregressive_model.py
stat_arb/: __main__.py  app.py  cli.py  db_run.py  run.py
stat_arb/app/: app.py
stat_arb/controller/: callbacks.py  regression_callbacks.py  strategy_callbacks.py
stat_arb/model/: bivariate_engle_granger.py  config.py  data_handler.py  defaults.py
stat_arb/model/data/: __init__.py  data_handler.py  data_handler_enum.py  data_handler_factory.py  local_data_handler.py  simulated_data_handler.py  yahoo_finance_data_handler.py
stat_arb/model/data_handler/: __init__.py  data_handler.py  data_handler_enum.py  data_handler_factory.py  simulated_data_handler.py  yahoo_finance_data_handler.py
stat_arb/model/defaults/: defaults.py
stat_arb/model/local_store/ticker_snapshot/: sp500_tickers_20250504.yaml  ticker_snapshot.py
stat_arb/model/local_store/yfinance_cache/: __init__.py  database_util.py  db_run.py  yfinance_cache.py
stat_arb/model/regressor/: __init__.py  naive_regressor.py  regressor.py  regressor_enum.py  rolling_window_regressor.py
stat_arb/model/statistical_tests/: cadf.py  statistical_tests.py
stat_arb/model/statistics/: __init__.py  cadf.py  ecm.py  regressor.py  regressor_enum.py  statistical_tests.py
stat_arb/model/trading_strategy/: __init__.py  ornstein_uhlenbeck.py  rolling_window.py  strategy.py  strategy_enum.py  toy_strategy.py
stat_arb/view/: ids.py  layout.py  regressor_layout.py  trading_strategy_layout.py
tests/: test_cadf.py  test_data_handler.py  test_yahoo_finance_data_handler.py
