[project]
name = "stat_arb"
version = "0.1.0"
description = "scraps of stat_arb"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "yfinance (>=0.2.55,<0.3.0)",
    "ipython (>=9.0.2,<10.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "dash (>=3.0.2,<4.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "dash-bootstrap-components (>=2.0.2,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pandas-stubs = "^2.2.3.250308"
types-pyyaml = "^6.0.12.20250516"

[tool.black]
line-length = 110

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
